--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Easy Table: Smart Web Data Extractor</title>
+    <title>Privacy Policy - Easy Table</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
@@ -12,17 +12,19 @@
 </head>
 <body class="bg-slate-50 text-slate-800">
 
-    <div class="max-w-3xl mx-auto px-6 py-12 bg-white shadow-sm my-10 rounded-xl">
+    <div class="max-w-3xl mx-auto px-6 py-12 bg-white shadow-sm my-10 rounded-xl border border-slate-200">
+        <a href="index.html" class="text-blue-600 text-sm font-medium hover:underline mb-8 inline-block">← Back to Home</a>
+        
         <header class="border-b border-slate-100 pb-8 mb-8">
             <h1 class="text-3xl font-bold text-slate-900">Privacy Policy</h1>
-            <p class="text-slate-500 mt-2">Last Updated: January 29, 2026</p>
+            <p class="text-slate-500 mt-2">Last Updated: January 31, 2026</p>
         </header>
 
         <section class="space-y-8">
             <div>
                 <h2 class="text-xl font-semibold text-slate-900 mb-3">1. Introduction</h2>
                 <p class="leading-relaxed text-slate-600">
-                    Welcome to <strong>Easy Table: Smart Web Data Extractor</strong>. We value your privacy and are committed to protecting your personal data. This policy explains how our browser extension operates and why you can trust us with your data.
+                    Welcome to <strong>Easy Table: Smart Web Data Extractor</strong>. We value your privacy and are committed to protecting your personal data. This policy explains how our browser extension operates and why you can trust us.
                 </p>
             </div>
 
@@ -32,69 +34,55 @@
                     Easy Table is a "Local-First" application. 
                 </p>
                 <ul class="list-disc list-inside mt-3 space-y-2 text-blue-800">
-                    <li><strong>No Table Data Uploads:</strong> All table extraction, editing, and conversion happen entirely within your browser. We never transmit your table content to our servers.</li>
-                    <li><strong>No Personal Identification:</strong> We do not collect your name, email address, IP address, or browsing history.</li>
-                    <li><strong>No Account Required:</strong> You can use all features of the extension without creating an account.</li>
+                    <li><strong>No Data Uploads:</strong> All table extraction and conversion happen entirely within your browser. We never transmit your table content to our servers.</li>
+                    <li><strong>No Personal Identification:</strong> We do not collect your name, email, IP address, or browsing history.</li>
+                    <li><strong>No Account Required:</strong> No login or registration is needed to use all features.</li>
                 </ul>
             </div>
 
             <div>
                 <h2 class="text-xl font-semibold text-slate-900 mb-3">3. Use of Permissions</h2>
-                <p class="leading-relaxed text-slate-600 mb-4">
-                    To provide its core functionality, Easy Table requires the following permissions:
-                </p>
                 <ul class="space-y-4">
                     <li class="flex gap-3">
                         <span class="font-mono bg-slate-100 px-2 py-0.5 rounded text-sm h-fit">activeTab</span>
-                        <span class="text-slate-600 text-sm">Used to detect and highlight tables on the page you are currently viewing.</span>
+                        <span class="text-slate-600 text-sm">Used to detect and highlight tables on the page only when the user interacts with the extension.</span>
                     </li>
                     <li class="flex gap-3">
                         <span class="font-mono bg-slate-100 px-2 py-0.5 rounded text-sm h-fit">storage</span>
-                        <span class="text-slate-600 text-sm">Used to save your last 10 extractions and settings locally on your device.</span>
+                        <span class="text-slate-600 text-sm">Used to securely save your extraction history and preference settings locally in your browser.</span>
                     </li>
                     <li class="flex gap-3">
                         <span class="font-mono bg-slate-100 px-2 py-0.5 rounded text-sm h-fit">scripting</span>
-                        <span class="text-slate-600 text-sm">Used to inject the extraction logic and the "Smart Hover" highlight effect into the webpage.</span>
+                        <span class="text-slate-600 text-sm">Used to inject the extraction logic and the "Smart Hover" effect into the current webpage.</span>
                     </li>
                 </ul>
             </div>
 
             <div>
-                <h2 class="text-xl font-semibold text-slate-900 mb-3">4. Third-Party Analytics</h2>
+                <h2 class="text-xl font-semibold text-slate-900 mb-3">4. Data Retention</h2>
                 <p class="leading-relaxed text-slate-600">
-                    We may use anonymous analytics tools (such as Google Analytics 4) to track <strong>aggregate usage patterns</strong> (e.g., how many users clicked the "Export to XLSX" button). This data is completely de-identified and is used solely to improve the user experience.
-                </p>
-            </div>
-
-            <div>
-                <h2 class="text-xl font-semibold text-slate-900 mb-3">5. Data Retention & Deletion</h2>
-                <p class="leading-relaxed text-slate-600">
-                    Since all data is stored locally in your browser's <code>chrome.storage</code>, you have absolute control. Uninstalling the extension or clearing your browser cache will instantly and permanently delete all saved table history.
+                    Since all data is stored locally, uninstalling the extension or clearing your browser cache will permanently delete all saved history.
                 </p>
             </div>
 
             <div class="border-t border-slate-100 pt-8">
-                <h2 class="text-xl font-semibold text-slate-900 mb-3">6. Contact Us</h2>
-                <p class="leading-relaxed text-slate-600">
-                    If you have any questions about this Privacy Policy, please contact us via our GitHub repository or support channel:
-                    <br>
-<<<<<<< HEAD
-                    <span class="text-blue-600 font-medium">https://github.com/gaoqc/table-flow-privacy/issues</span> 
-||||||| 47ce892
-                    <span class="text-blue-600 font-medium">support@tableflow-ai.com</span> 
-                    <em class="text-slate-400 text-sm block mt-1">(Replace with your actual contact or GitHub issue link)</em>
-=======
-                    <span class="text-blue-600 font-medium">qichenggao@gmail.com</span> 
-                    <em class="text-slate-400 text-sm block mt-1">(Replace with your actual contact or GitHub issue link)</em>
->>>>>>> c4f21ac86c2cef60094019803692e5a8a49555b2
-                </p>
+                <h2 class="text-xl font-semibold text-slate-900 mb-3">5. Contact & Support</h2>
+                <div class="mt-4 space-y-3">
+                    <p class="flex items-center gap-2">
+                        <span class="text-slate-500 w-16">GitHub:</span>
+                        <a href="https://github.com/gaoqc/easy-table-extension/issues" class="text-blue-600 hover:underline">gaoqc/easy-table-extension/issues</a>
+                    </p>
+                    <p class="flex items-center gap-2">
+                        <span class="text-slate-500 w-16">Email:</span>
+                        <a href="mailto:qichenggao@gmail.com" class="text-blue-600 hover:underline">qichenggao@gmail.com</a>
+                    </p>
+                </div>
             </div>
         </section>
 
         <footer class="mt-12 text-center text-slate-400 text-sm">
-            &copy; 2026 Easy Table: Smart Web Data Extractor. All rights reserved.
+            © 2026 Easy Table: Smart Web Data Extractor.
         </footer>
     </div>
-
 </body>
 </html>
