--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a href="#features" class="hover:text-blue-600">Features</a>
             <a href="privacy.html" class="hover:text-blue-600">Privacy</a>
             <a href="https://github.com/gaoqc/easy-table-extension/issues" class="hover:text-blue-600">Support</a>
+             <a href="https://github.com/gaoqc/easy-table-extension/table.html" class="hover:text-blue-600">Test Table</a>
         </div>
     </nav>
 
@@ -40,8 +41,83 @@
 
     <section class="max-w-5xl mx-auto px-6 pb-20">
         <div class="bg-slate-100 rounded-3xl p-4 shadow-inner border border-slate-200">
-            <img src="your-demo.gif" alt="Easy Table Demo" class="rounded-2xl w-full shadow-2xl">
+            <div class="relative overflow-hidden rounded-2xl w-full shadow-2xl group">
+                <!-- Carousel Track -->
+                <div id="carousel-track" class="flex transition-transform duration-700 ease-in-out cursor-pointer">
+                    <img src="./images/main.jpg" alt="Main Interface" class="w-[90%] flex-shrink-0 object-cover pr-4">
+                    <img src="./images/preview.jpg" alt="Data Preview" class="w-[90%] flex-shrink-0 object-cover pr-4">
+                    <img src="./images/batch-download.jpg" alt="Batch Download" class="w-[90%] flex-shrink-0 object-cover pr-4">
+                    <img src="./images/settings.jpg" alt="Settings" class="w-[90%] flex-shrink-0 object-cover pr-4">
+                </div>
+                
+                <!-- Navigation Buttons -->
+                <button id="prev-btn" class="absolute left-4 top-1/2 -translate-y-1/2 bg-white/80 hover:bg-white text-slate-800 p-3 rounded-full shadow-lg backdrop-blur-sm transition-all opacity-0 group-hover:opacity-100 focus:opacity-100" aria-label="Previous image">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5" />
+                    </svg>
+                </button>
+                <button id="next-btn" class="absolute right-4 top-1/2 -translate-y-1/2 bg-white/80 hover:bg-white text-slate-800 p-3 rounded-full shadow-lg backdrop-blur-sm transition-all opacity-0 group-hover:opacity-100 focus:opacity-100" aria-label="Next image">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+                    </svg>
+                </button>
+            </div>
         </div>
+        <script>
+            document.addEventListener('DOMContentLoaded', () => {
+                const track = document.getElementById('carousel-track');
+                const prevBtn = document.getElementById('prev-btn');
+                const nextBtn = document.getElementById('next-btn');
+                const count = track.children.length;
+                let index = 0;
+                let timer;
+
+                const updateCarousel = () => {
+                    // Calculate percentage based on count (each slide is 1/count of the track width)
+                    // Note: Since we use w-[85%] for slides, the track width is defined by content.
+                    // The shift needed is 100% / count
+                    track.style.transform = `translateX(-${index * (100 / count)}%)`;
+                };
+
+                const nextSlide = () => {
+                    index = (index + 1) % count;
+                    updateCarousel();
+                };
+
+                const prevSlide = () => {
+                    index = (index - 1 + count) % count;
+                    updateCarousel();
+                };
+
+                const startTimer = () => {
+                    if (timer) clearInterval(timer);
+                    timer = setInterval(nextSlide, 3000);
+                };
+
+                const resetTimer = () => {
+                    clearInterval(timer);
+                    startTimer();
+                };
+
+                // Event Listeners
+                nextBtn.addEventListener('click', () => {
+                    nextSlide();
+                    resetTimer();
+                });
+
+                prevBtn.addEventListener('click', () => {
+                    prevSlide();
+                    resetTimer();
+                });
+                
+                // Pause on hover
+                track.addEventListener('mouseenter', () => clearInterval(timer));
+                track.addEventListener('mouseleave', startTimer);
+
+                // Start
+                startTimer();
+            });
+        </script>
     </section>
 
     <section id="features" class="max-w-6xl mx-auto px-6 py-20 border-t border-slate-100">
