--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#features" class="hover:text-blue-600">Features</a>
             <a href="privacy.html" class="hover:text-blue-600">Privacy</a>
             <a href="https://github.com/gaoqc/easy-table-extension/issues" class="hover:text-blue-600">Support</a>
-             <a href="https://github.com/gaoqc/easy-table-extension/table.html" class="hover:text-blue-600">Test Table</a>
+             <a href="tables.html" class="hover:text-blue-600">Test Table</a>
         </div>
     </nav>
 
