--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#features" class="hover:text-blue-600">Features</a>
             <a href="privacy.html" class="hover:text-blue-600">Privacy</a>
             <a href="https://github.com/gaoqc/easy-table-extension/issues" class="hover:text-blue-600">Support</a>
-             <a href="tables.html" class="hover:text-blue-600">Test Table</a>
+             <a href="tables.html" class="hover:text-blue-600">Demo</a>
         </div>
     </nav>
 
@@ -33,10 +33,13 @@
             The professional browser extension to detect, preview, and export HTML tables to Excel, CSV, PDF, and Images with zero data collection.
         </p>
         <div class="flex flex-col sm:flex-row gap-4 justify-center">
-            <a href="https://chromewebstore.google.com/detail/table-flow-ai/flcedioalfgopopllgbheaejnpibfiam?authuser=0&hl=zh-CN" class="bg-blue-600 text-white px-8 py-4 rounded-full font-bold text-lg hover:bg-blue-700 transition shadow-lg shadow-blue-200">
+            <a href="https://chromewebstore.google.com/detail/table-flow-ai/flcedioalfgopopllgbheaejnpibfiam" class="bg-blue-600 text-white px-8 py-4 rounded-full font-bold text-lg hover:bg-blue-700 transition shadow-lg shadow-blue-200">
                 Add to Chrome — It's Free
             </a>
         </div>
+        <p class="mt-6 text-slate-500">
+            Want to try it yourself? Open our <a href="tables.html" class="text-blue-600 font-semibold hover:underline">Demo Page</a> and see the magic!
+        </p>
     </header>
 
     <section class="max-w-5xl mx-auto px-6 pb-20">
